--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -4,7 +4,7 @@
   <view class="cover-wrap">
     <image class="cover" src="{{item.imageList[0]}}" mode="widthFix" lazy-load />
     <view class="private-tag row" wx:if="{{item.isPrivate}}">
-      <image class="private-icon" src="https://img.ubo.vip/tiddler/private-icon.png" />
+      <image class="private-icon" src="https://img.ubo.vip/tiddler/media-item/private-icon.png" />
       <text>私密</text>
     </view>
     <view class="address-info" wx:if="{{item.address}}">
@@ -19,7 +19,7 @@
       <text class="author-name omit single-line">{{item.authorInfo.nickname}}</text>
     </view>
     <view class="praise-info">
-      <image class="praise-icon" src="https://img.ubo.vip/tiddler/heart.png" />
+      <image class="praise-icon" src="https://img.ubo.vip/tiddler/media-item/heart.png" />
       <text>{{NUM.over(item.likeNumber, 100000)}}</text>
     </view>
   </view>
