--- a/pages/subpages/mall/hotel/index.wxml
+++ b/pages/subpages/mall/hotel/index.wxml
@@ -2,7 +2,7 @@
 
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px;">
   <view class="search-bar-wrap">
-    <image class="back-icon" src="https://img.ubo.vip/tiddler/back.png" bindtap="navBack" />
+    <image class="back-icon" src="https://img.ubo.vip/tiddler/nav-icon/back.png" bindtap="navBack" />
     <view class="search-bar">
       <view class="calendar-bar" bindtap="showCalendarPopup">
         <view class="calendar-item">
@@ -14,7 +14,7 @@
           <text>{{TIME.transform(checkOutDate, 'MM-DD')}}</text>
         </view>
       </view>
-      <image class="search-icon" src="https://img.ubo.vip/tiddler/search.png" />
+      <image class="search-icon" src="https://img.ubo.vip/tiddler/nav-icon/search.png" />
       <input class="search-input" value="{{keywords}}" bindinput="setKeywords" bindconfirm="search" placeholder="搜索酒店/民宿" confirm-type="search" />
       <view class="cancel-btn" wx:if="{{keywords}}" bindtap="clearKeywords">
         <image class="cancel-icon" src="https://img.ubo.vip/mp/search/clear-search.png" />
