feat: 餐饮商家入驻

--- a/pages/subpages/home/media/live/create-live/index.wxml
+++ b/pages/subpages/home/media/live/create-live/index.wxml
@@ -56,7 +56,7 @@
         </view>
       </view>
     </view>
-    <view class="list row between" wx:if="{{userInfo.shopId}}">
+    <view class="list row between" wx:if="{{userInfo.merchantId}}">
       <view class="title">添加商品</view>
       <view class="list-picker row" bindtap="showGoodsPickerPopup">
         <text>{{pickedGoodsIds.length ? ('已选' + pickedGoodsIds.length + '件商品') : '请选择商品'}}</text>
