feat: 餐饮门店申请

--- a/pages/subpages/mine/merchant-center/index.wxml
+++ b/pages/subpages/mine/merchant-center/index.wxml
@@ -12,26 +12,26 @@
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
   <navigator class="list row between" wx:if="{{userInfo.merchantId}}" url="./subpages/shop-management/index" hover-class="none">
-    <view class="title">店铺管理</view>
+    <view class="title">电商管理</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
 </view>
 
 <view class="list-wrap">
   <view class="list row between" wx:if="{{!userInfo.scenicProviderId}}" bindtap="navToScenicProviderSettleIn">
-    <view class="title">景区入驻</view>
+    <view class="title">景区服务商入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <view class="list row between" wx:if="{{!userInfo.hotelProviderId}}" bindtap="navToHotelProviderSettleIn">
-    <view class="title">酒店入驻</view>
+    <view class="title">酒店服务商入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <view class="list row between" wx:if="{{!userInfo.cateringProviderId}}" bindtap="navToCateringSettleIn">
-    <view class="title">餐饮入驻</view>
+    <view class="title">餐饮商家入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <view class="list row between" wx:if="{{!userInfo.merchantId}}" bindtap="navToMerchantSettleIn">
-    <view class="title">商家入驻</view>
+    <view class="title">电商商家入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
 </view>
