--- a/pages/subpages/mine/setting/index.wxml
+++ b/pages/subpages/mine/setting/index.wxml
@@ -11,19 +11,19 @@
 
 <view class="list-wrap">
   <view class="list row between" bindtap="navToScenicProviderSettleIn">
-    <view class="title">景区入驻</view>
+    <view class="title">景区服务商入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <view class="list row between" bindtap="navToHotelProviderSettleIn">
-    <view class="title">酒店入驻</view>
+    <view class="title">酒店服务商入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <view class="list row between" bindtap="navToCateringSettleIn">
-    <view class="title">餐饮入驻</view>
+    <view class="title">餐饮商家入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <view class="list row between" bindtap="navToMerchantSettleIn">
-    <view class="title">商家入驻</view>
+    <view class="title">电商商家入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
 </view>
