--- a/pages/subpages/mine/merchant-center/index.wxml
+++ b/pages/subpages/mine/merchant-center/index.wxml
@@ -7,7 +7,7 @@
     <view class="title">酒店管理</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
-  <navigator class="list row between" wx:if="{{userInfo.cateringProviderId}}" url="./subpages/my-shop/index" hover-class="none">
+  <navigator class="list row between" wx:if="{{userInfo.cateringProviderId}}" url="./subpages/catering-management/index" hover-class="none">
     <view class="title">餐饮管理</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
