--- a/pages/subpages/mine/order-center/index.wxml
+++ b/pages/subpages/mine/order-center/index.wxml
@@ -12,7 +12,7 @@
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
   <navigator class="list row between" url="./subpages/shop-management/index" hover-class="none">
-    <view class="title">外卖订单</view>
+    <view class="title">餐饮订单</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
 </view>
