--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
@@ -4,10 +4,10 @@
 
 <view class="nav-bar-wrap">
   <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
-    <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{restaurantInfo.imageList[0]}}" mode="aspectFill" />
+    <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{restaurantInfo.cover}}" mode="aspectFill" />
     <view class="bg-cover" wx:if="{{navBarVisible}}" />
     <back-icon style="margin-left: 8px;" noBorder="{{navBarVisible}}" />
-    <image class="spot-image" wx:if="{{navBarVisible}}" src="{{restaurantInfo.imageList[0]}}" mode="aspectFill" />
+    <image class="spot-image" wx:if="{{navBarVisible}}" src="{{restaurantInfo.cover}}" mode="aspectFill" />
     <view class="spot-info" wx:if="{{navBarVisible}}">
       <view class="spot-name">{{restaurantInfo.name}}</view>
       <view class="grade-wrap row">
@@ -40,44 +40,35 @@
 </view>
 
 <view class="banner-wrap">
-  <swiper style="height: 420rpx;" circular bindchange="bannerChange">
-    <swiper-item wx:if="{{restaurantInfo.video}}">
+  <swiper style="height: 420rpx;" current="{{ curDot - 1 }}" circular bindchange="bannerChange">
+    <swiper-item wx:if="{{hotelInfo.video}}">
       <view class="video-wrap" bindtap="fullScreenPlay">
-        <video
-          class="video-player"
-          src="{{restaurantInfo.video}}"
-          muted="{{muted}}"
-          autoplay
-          loop
-          controls="{{false}}"
-          show-center-play-btn="{{false}}" 
-          show-fullscreen-btn="{{false}}"
-        />
+        <video class="video-player" src="{{hotelInfo.video}}" muted="{{muted}}" autoplay loop controls="{{false}}" show-center-play-btn="{{false}}" show-fullscreen-btn="{{false}}" />
       </view>
     </swiper-item>
-    <swiper-item 
-      wx:for="{{restaurantInfo.imageList}}" 
-      wx:key="index" 
-      bindtap="previewImage" 
-      data-current="{{item}}" 
-      data-urls="{{restaurantInfo.imageList}}"
-    >
+    <swiper-item wx:for="{{imageList}}" wx:key="index" bindtap="checkMoreImage">
       <image style="width:100%; height:100%;" src="{{item}}" mode='aspectFill' lazy-load />
     </swiper-item>
   </swiper>
-  <view class="mute-icon-wrap row center" wx:if="{{restaurantInfo.video && curDot === 1}}" catchtap="toggleMuted">
+  <view class="mute-icon-wrap row center" wx:if="{{hotelInfo.video && curDot === 1}}" catchtap="toggleMuted">
     <image class="mute-icon" src="./images/{{muted ? 'muted' : 'unmuted'}}.png" />
   </view>
-  <view class="banner-dots row">
-    <image class="dot-icon" src="{{(restaurantInfo.video && curDot === 1) ? './images/video.png' : './images/photo.png'}}" />
-    <text>{{curDot}}/{{restaurantInfo.imageList.length + (restaurantInfo.video ? 1 : 0)}}</text>
+  <view class="banner-menu-list">
+    <view class="banner-menu-item {{ curDot === index + 1 ? 'active' : '' }}" wx:for="{{imageMenuList}}" wx:key="index" catchtap="swiperBanner" data-index="{{index}}">
+      {{ item }}
+    </view>
+  </view>
+  <view class="more-media row" catchtap="checkMoreImage">
+    <image class="pic-icon" src="./images/photo.png" />
+    <text>{{ imageCount }}</text>
+    <image class="more-media-icon" src="./images/more-white.png" />
   </view>
 </view>
 
 <view class="container">
   <view class="row between">
     <view class="row">
-      <view class="scenic-spot-name">{{restaurantInfo.name}}</view>
+      <view class="restaurant-name">{{restaurantInfo.name}}</view>
       <view class="level-tag row">3A</view>
     </view>
     <image class="share-icon" src="./images/share.png" />
@@ -113,17 +104,13 @@
     </view>
   </view>
 
-  <view class="content-title-wrap row between">
-    <view class="content-title">景点门票</view>
-    <view class="content-title-tips row" wx:if="{{restaurantInfo.policyList.length}}" bindtap="checkPolicy">
-      <text>优待政策</text>
-      <image class="more-icon" src="./images/more-blue.png" />
-    </view>
+  <view class="content-title-wrap">
+    <view class="content-title">优惠券</view>
   </view>
   <scroll-view class="ticket-type-menu" scroll-x>
     <view 
       class="ticket-type-item {{curTicketTypeIdx === index ? 'active' : ''}}" 
-      wx:for="{{ticketTypeList}}" 
+      wx:for="{{mealTicketList}}" 
       wx:key="index"
       bindtap="selectTicketType"
       data-index="{{index}}"
@@ -139,21 +126,21 @@
       bind:showNoticePopup="showNoticePopup"
     />
   </view>
-  <empty-illus wx:if="{{!ticketTypeList.length}}" desc="暂无景点门票" height="520rpx" />
+  <empty-illus wx:if="{{!mealTicketList.length}}" desc="暂无优惠券" height="520rpx" />
 
-  <view class="content-title-wrap" wx:if="{{combinedTicketTypeList.length}}">
-    <view class="content-title">多景点联票</view>
+  <view class="content-title-wrap">
+    <view class="content-title">套餐</view>
   </view>
-  <scroll-view class="ticket-type-menu" scroll-x wx:if="{{combinedTicketTypeList.length}}">
+  <scroll-view class="ticket-type-menu" scroll-x wx:if="{{setMealList.length}}">
     <view 
       class="ticket-type-item {{curCombinedTicketTypeIdx === index ? 'active' : ''}}" 
-      wx:for="{{combinedTicketTypeList}}" 
+      wx:for="{{setMealList}}" 
       wx:key="index"
       bindtap="selectCombinedTicketType"
       data-index="{{index}}"
     >{{item}}</view>
   </scroll-view>
-  <view class="collapse" wx:if="{{combinedTicketTypeList.length}}">
+  <view class="collapse" wx:if="{{setMealList.length}}">
     <collapse-item 
       wx:for="{{combinedTicketList}}" 
       wx:key="index" 
@@ -164,6 +151,7 @@
       bind:booking="booking"
     />
   </view>
+  <empty-illus wx:if="{{!setMealList.length}}" desc="暂无套餐" height="520rpx" />
 
   <view class="content-title-wrap">
     <view class="content-title">用户点评</view>
@@ -220,7 +208,7 @@
   </view>
 
   <view class="content-title-wrap">
-    <view class="content-title">达人打卡</view>
+    <view class="content-title">达人品鉴</view>
   </view>
   <view class="media-wrap">
     <fall-flow list="{{mediaList}}" generic:item="media-item" />
