--- a/pages/subpages/mall/catering/components/restaurant-item/index.wxss
+++ b/pages/subpages/mall/catering/components/restaurant-item/index.wxss
@@ -77,12 +77,12 @@
 .open-status {
   padding: 0 12rpx;
   height: 32rpx;
-  color: #999;
+  color: #faad14;
   font-size: 20rpx;
   font-weight: bold;
   line-height: 1;
   border-radius: 8rpx;
-  background: #f6f6f6;
+  background: #f8f2d3;
 }
 .open-status.active {
   color: #5dce86;
