--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxss
@@ -268,7 +268,7 @@
   border-radius: 10rpx;
 }
 
-.position-info {
+.position-info-wrap {
   margin-top: 24rpx;
   padding-top: 20rpx;
   border-top: 1px solid #eee;
@@ -283,7 +283,7 @@
   color: #666;
   font-size: 22rpx;
 }
-.position-icon {
+.distance-icon {
   margin-right: 8rpx;
   width: 24rpx;
   height: 24rpx;
@@ -299,18 +299,34 @@
   height: 20rpx;
 }
 
-.navigation-btn {
-  padding: 0 16rpx;
-  height: 36rpx;
-  color: #666;
-  font-size: 20rpx;
-  border-radius: 18rpx;
-  background: #f1f1f1;
+.position-btn {
+  flex-direction: column;
 }
-.navigation-icon {
-  margin-right: 4rpx;
-  width: 18rpx;
-  height: 18rpx;
+.position-btn:first-child {
+  position: relative;
+  padding-right: 24rpx;
+}
+.position-btn:last-child {
+  position: relative;
+  padding-left: 24rpx;
+}
+.position-btn:first-child::after {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 1px;
+  height: 50rpx;
+  content: '';
+  background: #eee;
+}
+.position-icon {
+  width: 60rpx;
+  height: 60rpx;
+}
+.position-btn-desc {
+  color: #333;
+  font-size: 16rpx;
 }
 
 .content-title-wrap {
