--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/more-info/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/more-info/index.wxss
@@ -54,15 +54,20 @@
   line-height: 1;
 }
 
-.introduction {
-  margin-top: 18rpx;
-  color: #666;
-  font-size: 24rpx;
-}
-.toggle-fold-btn {
+.open-status {
   margin-left: 12rpx;
-  color: #77a9fd;
+  padding: 0 12rpx;
+  height: 32rpx;
+  color: #faad14;
+  font-size: 20rpx;
   font-weight: bold;
+  line-height: 1;
+  border-radius: 8rpx;
+  background: #f8f2d3;
+}
+.open-status.active {
+  color: #5dce86;
+  background: #d1f7e5;
 }
 
 .grid {
@@ -101,22 +106,6 @@
   justify-content: flex-start;
 }
 
-.warning-tips {
-  position: relative;
-  margin-top: 24rpx;
-  padding-left: 12rpx;
-  color: #999;
-  font-size: 20rpx;
-}
-.warning-tips::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "*";
-  font-size: 18rpx;
-  color: #999;
-}
-
 .tel {
   padding: 24rpx 0;
   color: #333;
@@ -132,57 +121,16 @@
   height: 48rpx;
 }
 
-.facility-wrap {
-  margin-top: 24rpx;
+.facility-list {
+  margin-top: 12rpx;
+  flex-wrap: wrap;
 }
-.facility-btn {
-  margin-right: 24rpx;
-  padding: 12rpx;
-  border: 1px solid #ddd;
-  border-radius: 8rpx;
-}
-.facility-btn.active {
-  background: #EEF2F5;
-  border: 1px solid #9abaf0;
-}
-.facility-icon {
-  width: 42rpx;
-  height: 42rpx;
-}
-.facility-info {
-  margin-top: 24rpx;
-  padding: 18rpx;
-  font-size: 24rpx;
-  background: #f5f6f7;
-  border-radius: 8rpx;
-}
-.facility-name {
-  color: #333;
-  font-weight: bold;
-}
-.facility-content {
-  margin-top: 8rpx;
-  color: #666;
-}
-
-.tips-list {
-  font-size: 24rpx;
-}
-.tips-item {
-  display: flex;
-  padding: 24rpx 0;
-  border-bottom: 1px solid #f5f6f7;
-}
-.tips-item:last-child {
-  padding-bottom: 0;
-  border-bottom: none;
-}
-.tips-title {
-  flex: 1;
-  color: #333;
-  font-weight: bold;
-}
-.tips-content {
-  flex: 4;
-  color: #666;
+.facility {
+  margin-right: 12rpx;
+  margin-top: 12rpx;
+  color: #999;
+  font-size: 20rpx;
+  background: #f2f2f2;
+  padding: 2rpx 10rpx;
+  border-radius: 10rpx;
 }
