--- a/pages/subpages/mall/catering/components/restaurant-item/index.wxml
+++ b/pages/subpages/mall/catering/components/restaurant-item/index.wxml
@@ -32,19 +32,19 @@
     </view>
   </view>
   <view class="meal-ticket-list">
-    <view class="meal-ticket row">
+    <view class="meal-ticket row" wx:if="{{item.mealTicketList.length}}">
       <view class="ticket-lebal-wrap row end">
-        <view class="ticket-lebal row">剩余01:29:58</view>
+        <view class="ticket-lebal row">新客特惠</view>
       </view>
       <view class="ticket-content row">
         <view class="ticket-icon row center">券</view>
-        <view class="ticket-price">¥90</view>
-        <view class="ticket-desc">100元代金券</view>
+        <view class="ticket-price">¥{{item.mealTicketList[0].price}}</view>
+        <view class="ticket-desc">{{item.mealTicketList[0].originalPrice}}元代金券</view>
       </view>
     </view>
     <view class="meal-ticket row">
       <view class="ticket-lebal-wrap row end">
-        <view class="ticket-lebal row">新客特惠</view>
+        <view class="ticket-lebal row">剩余01:29:58</view>
       </view>
       <view class="ticket-content row">
         <view class="ticket-icon row center">惠</view>
