feat: 餐饮代金券

--- a/pages/subpages/mall/catering/subpages/restaurant-detail/components/ticket-item/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/components/ticket-item/index.wxml
@@ -5,9 +5,7 @@
   <view class="ticket-info">
     <view class="ticket-name">{{ ticket.price + '代' + ticket.originalPrice + '元代金券' }}</view>
     <view class="tips row">
-      <view class="tip">{{ ticket.useTimeList.length ? '部分时段可用' : '营业时间内可用' }}</view>
-      <view class="tip">{{ !ticket.overlayUsageLimit ? '不限张数' : ('单次可用' + ticket.overlayUsageLimit + '张') }}</view>
-      <view class="tip" wx:if="{{ticket.needPreBook}}">需预约</view>
+      <view class="tip" wx:for="{{tips}}" wx:key="tipIdx" wx:for-index="tipIdx" wx:for-item="tip">{{ tip }}</view>
     </view>
     <view class="price-wrap row">
       <price-unit price="{{ticket.price || 0}}" color="#F66B38" unitColor="#F66B38" />
